# nn_executor

./: .gitignore  README.md  executor.py  models.py  parser.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_json.json  test_json.pth  test_tmp.pth  tmp.json  tmp.pth  tmp.py
src/nn_executor/: __init__.py  connection.py  executor.py  executor_nodes.py  graph_analyzer.py  model_description.py  models.py  modifiers.py  parser.py  prune.py  pruner_base.py  types.py  utils.py  visualizer.py
src/nn_executor/pruning/: bidirectional_node.py  prune.py  pruners.py  pruning_utils.py
src/nn_executor/static/: __init__  analyzer.py  models.py  modifiers.py
src/nn_executor/training/: __init__.py  callbacks.py  criterions.py  metrics.py  preprocessing.py  schedulers.py  training.py  utils.py
tests/: __init__.py  shared.py  shared_tests_data.py  test_graph_analyzer.py  test_models.py  test_parse.py  test_prune.py  test_static_analyzer.py  test_utils.py  test_visualizer.py
tests/static/: __init__.py  test_analyzer.py
