[metadata]
name=nn_executor
version = 0.0.2
author = Michal Machura
author_email = michal.m.machura@gmail.com
description = Pytorch models serializer and deserializer - executor

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = torch

[options.packages.find]
where = src
